2000-05-29  Not Zed  <NotZed@HelixCode.com>

	* folder-browser.c (folder_browser_load_folder): Hardcode the
	vfolder source to just the inbox (so at least it returns
	something).

	* component-factory.c (create_test_storage): Create a vfolder dir
	first, and put the folders in that.
	(create_test_storage): Create the storage as VFolders, not
	"storage_name" :)

2000-05-28  Dan Winship  <danw@helixcode.com>

	* mail-config.c (error_dialog): helper function since we need to
	set "modal" on the dialogs returned by gnome_error_dialog to make
	them work when popped up from the modal Druid.
	(service_acceptable): New function to check if the info entered on
	a store/transport page actually checks out.
	(mail_config_druid): Connect to the "next" signal on the store and
	transport pages and don't let the user continue if the data is
	bad and "check this before continuing" is checked. Also, only
	display sources/transports in the "mail" domain. (Ie, not
	"vfolder".)

	* mail-format.c (write_recipients_to_stream): Use `foo@bar' rather
	than `<foo@bar>' for recipient with no name.

	* mail-ops.c (fetch_mail): don't put up an error message if the
	user cancels the password dialog.

2000-05-27  Not Zed  <NotZed@HelixCode.com>

	* Makefile.am (SHELL_OBJS): Include mail storage so we can
	initialise folders.

	* component-factory.c (create_test_storage): Parses vfolder
	defintions and adds them to the storage.  Definetly needs more
	work.

	* folder-browser-factory.c (control_activate): Add the VFolder
	druid menu item.
	(control_deactivate): And remove it.

	* mail-ops.c (vfolder_editor_clicked): For editing vfolder
	definitions (rather like filters, oddly enough :).  Tries to
	update the shell but it doesn't seem to work properly - requires a
	mail component restart to take effect.

	* folder-browser.c (folder_browser_load_folder): Handle vfolder:
	urls' appropriately and map to camel.  Still needs a way to tell